--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -21,6 +21,7 @@
     <PackageReleaseNotes>
       - Bump sweetalert2
       - Add OnRender callback
+      - Fix missing OnRender functionality
     </PackageReleaseNotes>
   </PropertyGroup>
 
