--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,12 @@ jobs:
     pool:
       vmImage: "windows-latest"
     steps:
+      - task: CacheBeta@1
+        inputs:
+          key: "yarn | $(Agent.OS) | yarn.lock"
+          path: "$(YARN_CACHE_FOLDER)"
+        displayName: Cache Yarn packages
+
       - task: YarnInstaller@3
         displayName: "Installing Yarn 1.17.x"
         inputs:
@@ -87,6 +93,12 @@ jobs:
     pool:
       vmImage: "windows-latest"
     steps:
+      - task: CacheBeta@1
+        inputs:
+          key: "yarn | $(Agent.OS) | yarn.lock"
+          path: "$(YARN_CACHE_FOLDER)"
+        displayName: Cache Yarn packages
+        
       - task: YarnInstaller@3
         displayName: "Installing Yarn 1.17.x"
         inputs:
