--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -92,7 +92,7 @@ stages:
             displayName: "Installing .NET Core SDK..."
             inputs:
               packageType: "sdk"
-              version: "3.0.100-preview9-014004"
+              version: "3.0.100-rc1-014190"
 
           - task: DotNetCoreCLI@2
             displayName: "Restoring Nuget Packages"
