add initial theme per scheme functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "tslint.exclude": ["**/*.ts", "**/*.tsx"]
+  "tslint.exclude": [
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "cSpell.words": [
+    "currietechnologies",
+    "swal"
+  ]
 }
