--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "eslint": "^6.5.1",
     "eslint-config-prettier": "^6.4.0",
     "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.18.2",
+    "sass": "^1.23.0",
     "sass-loader": "^8.0.0",
     "terser-webpack-plugin": "^2.1.3",
     "typescript": "^3.6.4",
