--- a/CurrieTechnologies.Razor.SweetAlert2.csproj
+++ b/CurrieTechnologies.Razor.SweetAlert2.csproj
@@ -19,7 +19,8 @@
     <RepositoryType>git</RepositoryType>
     <PackageTags>Blazor SweetAlert SweetAlert2 JSInterop Server Razor</PackageTags>
     <PackageReleaseNotes>
-      - Bump sweetalert2 version
+      New SetThemeForColorSchemePreference() option to apply themes to specific user color scheme preferences.
+      New script for IE Compatibility.
     </PackageReleaseNotes>
   </PropertyGroup>
 
